--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M26TV87"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-<div class="w-screen flex justify-between items-center px-4 sm:px-6 md:px-8 lg:px-12 xl:px-24 py-0 overflow-x-hidden bg-white sticky top-0">
+<div class="w-screen flex justify-between items-center px-4 sm:px-6 md:px-8 lg:px-12 xl:px-24 py-0 overflow-x-hidden
+ bg-white sticky top-0 z-50">
     <div class="mb-4 sm:mb-0">
         <img src="./Image/logo.svg" alt="logo" class="w-32 sm:w-40 md:w-48 lg:w-56 max-w-full h-22 object-contain">
     </div>
@@ -38,7 +39,7 @@
     <div id="carousel" class="flex w-full h-full">
       <!-- Slide 1 -->
       <div class="carousel-item w-full flex-shrink-0">
-        <img src="./Image/niramaya 1.3 new size (2).jpg" alt="Banner 1" class="w-full h-full object-cover">
+        <img src="./Image/niramaya 1.3 resizing.jpg" alt="Banner 1" class="w-full h-full object-cover">
       </div>
       <!-- Slide 2 -->
       <!-- <div class="carousel-item w-full flex-shrink-0">
@@ -130,18 +131,18 @@
     </div>
     
 
-    <!-- Icons Section -->
-<div class="w-screen bg-white md:flex hidden flex-wrap justify-center items-center  sm:gap-10 gap-3 py-8 sm:px-0   px-0 overflow-x-hidden">
+ <!-- Icons Section -->
+ <div class="w-screen bg-white md:flex hidden flex-wrap justify-center items-center  sm:gap-10 gap-3 py-8 sm:px-4   px-0 overflow-x-hidden">
     <!-- Icon 1 -->
     <div class="flex flex-col px-2 justify-center items-center w-48 h-32 border  shadow-lg border-[#A4E5FF] rounded-md">
         <img src="./Image/icon1.png" alt="Get Reports" class="w-12 h-12 mb-2">
-        <p class="text-center text-[#8A8383] font-medium sm:text-base text-sm">Get Reports on WhatsApp in 15 hours</p>
+        <p class="text-center text-[#8A8383] font-medium sm:text-base text-sm">Get Reports on WhatsApp in 15 hours*</p>
     </div>
 
     <!-- Icon 2 -->
     <div class="flex flex-col px-2 justify-center  items-center w-48 h-32 border rounded-md shadow-lg border-[#A4E5FF]">
         <img src="./Image/icon2.png" alt="Free Home Sample" class="w-12 h-12 mb-2">
-        <p class="text-center text-[#8A8383] font-medium sm:text-base text-sm">Free Home Sample <br>By trained Professionals</p>
+        <p class="text-center text-[#8A8383] font-medium sm:text-base text-sm">Free Home Sample Collection*<br></p>
     </div>
 
     <!-- Icon 3 -->
@@ -151,13 +152,13 @@
     </div>
     <div class="flex flex-col px-2 justify-center items-center w-48 h-32 border rounded-md  shadow-lg border-[#A4E5FF]">
         <img src="./Image/icon4.jpeg" alt="NABL Accreditation" class="w-12 h-12 mb-2 object-contain">
-        <p class="text-center text-[#8A8383] font-medium sm:text-base text-sm">Accreditations NABL</p>
+        <p class="text-center text-[#8A8383] font-medium sm:text-base text-sm"> NABL Accredited</p>
     </div>
 
     <!-- Icon 4 -->
     <div class="flex flex-col  px-2  justify-center  items-center w-48 h-32 border rounded-md shadow-lg border-[#A4E5FF]">
         <img src="./Image/icon5.jpeg" alt="NABH Accreditation" class="w-12 h-12 mb-2 object-contain">
-        <p class=" text-[#8A8383] font-medium sm:text-base text-sm text-center">Accreditations NABH</p>
+        <p class=" text-[#8A8383] font-medium sm:text-base text-sm text-center"> NABH Accredited</p>
     </div>
 
     <!-- Icon 5 -->
@@ -352,7 +353,7 @@ Liver Function Test (Bilirubin, SGOT, SGPT)
         </div>
         <div class="flex flex-col justify-center items-center">
             <img src="./Image//whychhose-icon (2).png" alt="whychhose" class="lg:w-20 lg:h-20 pb-4 object-contain" >
-            <div class="text-[#189ED3] font-semibold  md:text-2xl xs:text-xl text-base text-center">More Than 1cr Tests Done</div>
+            <div class="text-[#189ED3] font-semibold  md:text-2xl xs:text-xl text-base text-center">More Than 5cr Tests Done</div>
         </div>
         <div class="flex flex-col justify-center items-center">
             <img src="./Image//whychhose-icon (1).png" alt="whychhose" class="lg:w-20 lg:h-20 object-contain pb-4" >
@@ -508,7 +509,7 @@ Liver Function Test (Bilirubin, SGOT, SGPT)
           </div>
           <div class="flex items-center space-x-2">
             <span class="text-white font-semibold text-2xl">Email Id: </span>
-            <a href="mailto:info@mdrcindia.com" class="text-[#fff] font-bold text-2xl hover:underline ">info@mdrcindia.com</a>
+            <a href="mailto:info@mdrcindia.com" class="text-[#fff] font-bold text-2xl hover:underline ">care@mdrcindia.com</a>
           </div>
         </div>
       </div>
