--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ Liver Function Test (Bilirubin, SGOT, SGPT)
 <!-- why chhose us section -->
 <div class="w-screen flex  bg-[#f6f6f6] flex-col justify-center items-center md:px-0 px-0 sm:py-16 py-5">
     <h2  class="text-3xl sm:text-4xl lg:text-5xl font-bold text-center text-[#565353] md:mb-14 xs:mb-5 mb-5">Why choose us</h2>
-    <div class="max-w-6xl flex flex-wrap justify-evenly lg:gap-16 sm:gap-8 gap-2 items-center">
+    <div class="max-w-6xl flex flex-wrap justify-evenly lg:gap-10 sm:gap-6 gap-2 items-center">
         <div class="flex flex-col justify-center items-center">
             <img src="./Image//whychhose-icon (4).png" alt="whychhose" class="lg:w-20 lg:h-20 object-contain pb-4" >
             <div class="text-[#189ED3] font-semibold  md:text-2xl xs:text-xl text-base text-center">4 Decades of Experience</div>
@@ -353,7 +353,7 @@ Liver Function Test (Bilirubin, SGOT, SGPT)
         </div>
         <div class="flex flex-col justify-center items-center">
             <img src="./Image//whychhose-icon (2).png" alt="whychhose" class="lg:w-20 lg:h-20 pb-4 object-contain" >
-            <div class="text-[#189ED3] font-semibold  md:text-2xl xs:text-xl text-base text-center">More Than 5cr Tests Done</div>
+            <div class="text-[#189ED3] font-semibold  md:text-2xl xs:text-xl text-base text-center">More Than 5cr+ Tests Done</div>
         </div>
         <div class="flex flex-col justify-center items-center">
             <img src="./Image//whychhose-icon (1).png" alt="whychhose" class="lg:w-20 lg:h-20 object-contain pb-4" >
